--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ section.about .social a img
 
 section.project{
     background-color: var(--dark);
-    height: 400px;
+    height: 500px;
 }
 
 section.project .container{
@@ -139,7 +139,7 @@ section .project .text h1{
 
 section.project .card-wrapper{
     display: grid;
-    margin-top: 5rem;
+    margin-top: 7rem;
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 15rem;
     grid-row-gap: 4rem;
@@ -169,7 +169,7 @@ section.project .card-wrapper .card img{
 }
 
 section.project .card-wrapper .card:hover{
-     transform: scale(0.8);
+     transform: scale(1.2);
     transition: 0.3s ease;
 }
 
@@ -240,6 +240,60 @@ section.skill .container img:hover{
     padding-top: 2rem;
 }
 
+@media (max-width:900px) and (min-width:500px)
+{
+    header .container nav{
+        
+        display: flex;
+        flex-direction: column;
+    }
+    
+    header .container nav .right {
+        margin-top: 1rem;
+    }
+    header .intro{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+
+    }
+    header .intro .left h1{
+        font-size: 30px;
+    }
+    header .intro .left p{
+        font-size: 20px;
+    }
+    header .intro .right img{
+        
+        margin-top: 2rem;
+        height: 300px;
+    }
+    section.about .container{
+        flex-direction: column;
+    }
+    section.about .container .abouttext{
+        text-align: center;
+    }
+    section.about .container .abouttext .social{
+        align-items: center;
+        justify-content: center;
+    }
+
+    section.project .card-wrapper{
+    display: grid;
+    margin-top: 7rem;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 2rem;
+    grid-row-gap: 4rem;
+
+
+}
+
+    
+}
+
 .close{
     position: absolute;
     top: 0;
@@ -248,6 +302,8 @@ section.skill .container img:hover{
     transform:rotate(45deg);
     cursor: pointer;
 }
+
+
 footer{
     display: flex;
     align-items: center;
